corrigindo continua com dados decimais

--- a/SoftwareEstatistica.Web/Views/Quantitativas/MedidasSeparatrizes.cshtml
+++ b/SoftwareEstatistica.Web/Views/Quantitativas/MedidasSeparatrizes.cshtml
@@ -18,11 +18,11 @@
     </div>
     <a id="analisarMed" class="waves-effect waves-light btn">Analisar</a>
     <div class="row" style="margin: 20px 0;">
-        <p id="resulMedMenor" class="col s1">0</p>
+        <p id="resulMedMenor" class="col s1 green-text"></p>
         <div class="progress red col s10" style="margin:20px 0">
             <div id="linhaMed" class="determinate green" style="width: 100%"></div>
         </div>
-        <p id="resulMedMaior" class="col s1">0</p>
+        <p id="resulMedMaior" class="col s1 red-text"></p>
     </div>
 </div>
 
