--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Quantitativas.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Quantitativas.cshtml
@@ -151,13 +151,14 @@
             }).done(function (data) {
                 $("#graficoadicionado").append($("<div>", {
                     class: "col s12 areaDados",
+                    style: "padding: 0 10px",
                     html: [$("<h5>", {
                         html: ["Gráfico"]
                     }), data]
                 }));
                 }).fail(erro);
 
-            $.get("/Quantitativas/MedidasSeparatrizes", {
+            $.post("/Quantitativas/MedidasSeparatrizes", {
                 jsonDadosColetados: JSON.stringify(frequencia), tipo : "@ViewBag.Tipo"
             })
                 .done(function (data) {
