--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -56,8 +56,20 @@
         </ul>
     </li>
     <li><a href="#!" id="varQualitativa" class="white-text">Variaveis Qualitativas</a></li>
-    <li><a href="#!" id="distribuicaoBinomial" class="white-text">Distribuição Binomial</a></li>
-    <li><a href="#!" id="distribuicaoUniforme" class="white-text">Distribuição Uniforme</a></li>
+    <li class="no-padding">
+        <ul class="collapsible collapsible-accordion">
+            <li>
+                <a class="collapsible-header white-text">Distribuições<i class="material-icons right white-text">zoom_in</i></a>
+                <div class="collapsible-body blue-grey darken-1">
+                    <ul>
+                        <li><a href="#!" id="distribuicaoBinomial" class="white-text">Binomial</a></li>
+                        <li><a href="#!" id="distribuicaoUniforme" class="white-text">Uniforme</a></li>
+                        <li><a href="#!" id="distribuicaoNormal" class="white-text">Normal</a></li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </li>
 </ul>
 <div class="botoes-navegacao">
     <a href="#" data-target="slide-out" class="sidenav-trigger menu"><i class="material-icons">menu</i></a>
