Inserindo Correlacao e regresao

--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -70,6 +70,7 @@
             </li>
         </ul>
     </li>
+    <li><a href="#!" id="correlacaoReg" class="white-text">Correlação e Regreção</a></li>
 </ul>
 <div class="botoes-navegacao">
     <a href="#" data-target="slide-out" class="sidenav-trigger menu"><i class="material-icons">menu</i></a>
