inserindo modificacoes finais

--- a/SoftwareEstatistica.Web/Views/CorrelacaoRegrecao/FomularioCorReg.cshtml
+++ b/SoftwareEstatistica.Web/Views/CorrelacaoRegrecao/FomularioCorReg.cshtml
@@ -132,9 +132,7 @@
                 $("#grafico").append($("<div>", {
                     class: "col s12 areaDados",
                     style: "padding: 0 10px",
-                    html: [$("<h5>", {
-                        html: ["Gráfico"]
-                    }), data]
+                    html: [data]
                 }));
             }).fail(erro);
 
